# minimal_physics

./: Cargo.toml
examples/: physics_example.rs
src/: lib.rs  prelude.rs
src/physics/: actor.rs  collider.rs  mod.rs
