[package]
name = "minimal_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.9.1"
macroquad = "0.3.25"

[lib]
name = "minimal_physics"
crate-type = ["lib"]

[[example]]
name = "physics_example"
